# ads_spec_typescript_javascript_profissional

./: .gitignore  README.md  mike-mkdocsd427axwo.yml  mkdocs.yml  pyproject.toml  requirements.txt  tasks.py  test_output.txt  versions.json
.github/workflows/: deploy.yml  documentation.yaml
_revisao/setups/: index.md  setup-05.md  setup-08.md
docs/: index.md  materiais.md  plano-ensino.md  print_page.md  project_roadmap.md  sobre.md
docs/aulas/: aula-01.md  aula-02.md  aula-03.md  aula-04.md  aula-05.md  aula-06.md  aula-07.md  aula-08.md  aula-09.md  aula-10.md  aula-11.md  aula-12.md  aula-13.md  aula-14.md  aula-15.md  aula-16.md  index.md
docs/exercicios/: exercicio-01.md  exercicio-02.md  exercicio-03.md  exercicio-04.md  exercicio-05.md  exercicio-06.md  exercicio-07.md  exercicio-08.md  exercicio-09.md  exercicio-10.md  exercicio-11.md  exercicio-12.md  exercicio-13.md  exercicio-14.md  exercicio-15.md  exercicio-16.md  index.md
docs/projetos/: index.md  projeto-01.md  projeto-02.md  projeto-03.md  projeto-04.md  projeto-05.md  projeto-06.md  projeto-07.md  projeto-08.md  projeto-09.md  projeto-10.md  projeto-11.md  projeto-12.md  projeto-13.md  projeto-14.md  projeto-15.md  projeto-16.md
docs/quizzes/: index.md  quiz-01.md  quiz-02.md  quiz-03.md  quiz-04.md  quiz-05.md  quiz-06.md  quiz-07.md  quiz-08.md  quiz-09.md  quiz-10.md  quiz-11.md  quiz-12.md  quiz-13.md  quiz-14.md  quiz-15.md  quiz-16.md
estavel/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
hooks/: copy_slides.py
overrides/: home.html
scripts/: add_fragments.py  audit_files.py  check_content.py  check_links.py  check_mermaid_syntax.py  convert_quizzes.py  convert_quizzes_to_interactive.py  convert_termynals.py  fix_admonitions.py  fix_slide_links.py  fix_slides_title.py  fix_termy_div.py  fix_termynal.py  gen_nav.py  generate_logic_content.py  generate_slides_quizzes.py  recover_quizzes.py  rename_files.py  revert_termynal.py  scaffold_course.py  termynal_to_html.py  validate_mermaid.py  verify_structure.py
tests/: conftest.py  test_assets.py  test_course_structure.py  test_fullscreen.py  test_layout.py  test_mermaid_syntax.py  test_navigation.py  test_quizzes.py  test_site_structure.py  test_slide_build.py  test_slide_generation.py  test_slides.py  test_termynal_copy.py
(+231 files in other folders)
